# xgrpc

./: .gitignore  2022-7-27-log.txt  CMakeLists.txt  README.md  autobuild.sh
example/: friendslist.pb.cc  friendslist.pb.h  friendslist.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  rpcservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
include/: application.h  channel.h  config.h  controller.h  lockqueue.h  logger.h  provider.h  rpcheader.pb.h  zkclient.h
src/: CMakeLists.txt  application.cc  channel.cc  config.cc  controller.cc  logger.cc  provider.cc  rpcheader.pb.cc  rpcheader.proto  zkclient.cc
